[package]
name = "artemis-asset"
version = "0.1.1"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"], optional = true }
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
mangata-primitives = { default-features = false, version = '0.1.0', path="../../../../mangata-node/primitives/mangata" }
orml-tokens = { default-features = false, version = '0.4.1-dev', path="../../../../open-runtime-module-library/tokens"}
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { default-features = false, version = '4.0.0-dev' , path="../../../../substrate/frame/support"}
frame-system = { default-features = false, version = '4.0.0-dev' , path="../../../../substrate/frame/system"}
sp-core = { default-features = false, version = '4.0.0-dev' , path="../../../../substrate/primitives/core"}
sp-io = { default-features = false, version = '4.0.0-dev' , path="../../../../substrate/primitives/io"}
sp-runtime = { default-features = false, version = '4.0.0-dev' , path="../../../../substrate/primitives/runtime"}
sp-std = { version = "4.0.0-dev", default-features = false, path="../../../../substrate/primitives/std"}
artemis-core = { default-features = false, path = "../../primitives/core"}
artemis-ethereum = { default-features = false, path = "../../primitives/ethereum"}

[dev-dependencies]
sp-keyring = { version = "4.0.0-dev", default-features = false, path="../../../../substrate/primitives/keyring"}

[features]
default = ["std"]
std = [
    "hex/std",
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "artemis-core/std",
]
