[package]
name = "artemis-asset"
version = "0.1.1"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"], optional = true }
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
mangata-primitives = { default-features = false, version = '0.1.0', git = "https://github.com/mangata-finance/mangata-node", branch = "develop-v0.9.19" }
orml-tokens = { default-features = false, version = '0.4.1-dev', git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev-v0.9.19"}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.19"}
frame-system = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.19"}
sp-core = { default-features = false, version = '6.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.19"}
sp-io = { default-features = false, version = '6.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.19"}
sp-runtime = { default-features = false, version = '6.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.19"}
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.19"}
artemis-core = { default-features = false, path = "../../primitives/core"}
artemis-ethereum = { default-features = false, path = "../../primitives/ethereum"}

[dev-dependencies]
sp-keyring = { version = "6.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.19"}

[features]
default = ["std"]
std = [
    "hex/std",
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "artemis-core/std",
]
