[package]
name = "artemis-erc20-app"
version = "0.1.1"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
rlp = { version = "0.4", default-features = false }
serde = { version = "1.0.126", features = ["derive"], optional = true }
hex-literal = { version = "0.3.3", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
mangata-primitives = { default-features = false, version = '0.1.0', git = "https://github.com/mangata-finance/mangata-node", branch = "develop-v0.9.20" }
orml-tokens = { default-features = false, version = '0.4.1-dev', git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev-v0.9.20"}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.20"}
frame-system = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.20"}
sp-core = { default-features = false, version = '6.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.20"}
sp-io = { default-features = false, version = '6.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.20"}
sp-runtime = { default-features = false, version = '6.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.20"}
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.20"}
artemis-core = { default-features = false, path = "../../primitives/core"}
artemis-ethereum = { default-features = false, path = "../../primitives/ethereum"}
artemis-asset = { default-features = false, path = "../asset"}
ethabi = { package="ethabi-decode", default-features = false, version = "1.2.1", git = "https://github.com/Snowfork/ethabi-decode"}

[dev-dependencies]
sp-keyring = { version = "6.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.20"}
orml-traits = { default-features = false, version = '0.4.1-dev', git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev-v0.9.20"}

[features]
default = ["std"]
std = [
    "hex/std",
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "artemis-core/std",
    "artemis-ethereum/std",
    "artemis-asset/std",
    "ethabi/std",
    "rlp/std",
    'orml-tokens/std',
]
