[package]
name = "pallet-verifier"
description = "Artemis Verifier Pallet"
version = "0.1.1"
edition = "2018"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/polkadot-ethereum"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"], optional = true }
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { default-features = false, version = '4.0.0-dev' , path="../../../../substrate/frame/support"}
frame-system = { default-features = false, version = '4.0.0-dev' , path="../../../../substrate/frame/system"}
sp-core = { default-features = false, version = '4.0.0-dev' , path="../../../../substrate/primitives/core"}
sp-io = { default-features = false, version = '4.0.0-dev' , path="../../../../substrate/primitives/io"}
sp-runtime = { default-features = false, version = '4.0.0-dev' , path="../../../../substrate/primitives/runtime"}
sp-std = { version = "4.0.0-dev", default-features = false, path="../../../../substrate/primitives/std"}
artemis-core = { default-features = false, path = "../../primitives/core"}
artemis-ethereum = { default-features = false, path = "../../primitives/ethereum"}

[dev-dependencies]
sp-keyring = { version = "4.0.0-dev", default-features = false, path="../../../../substrate/primitives/keyring"}



[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "artemis-core/std",
    "artemis-ethereum/std",
]
