[package]
name = "pallet-verifier"
description = "Artemis Verifier Pallet"
version = "0.1.1"
edition = "2018"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/polkadot-ethereum"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"], optional = true }
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.17"}
frame-system = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.17"}
sp-core = { default-features = false, version = '5.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.17"}
sp-io = { default-features = false, version = '5.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.17"}
sp-runtime = { default-features = false, version = '5.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.17"}
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.17"}
artemis-core = { default-features = false, path = "../../primitives/core"}
artemis-ethereum = { default-features = false, path = "../../primitives/ethereum"}

[dev-dependencies]
sp-keyring = { version = "5.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v0.9.17"}



[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "artemis-core/std",
    "artemis-ethereum/std",
]
