[package]
name = "artemis-core"
version = "0.1.1"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101",optional = true }
frame-support = { default-features = false, version = '3.0.0' , path="../../../../substrate/frame/support"}
sp-core = { default-features = false, version = '3.0.0' , path="../../../../substrate/primitives/core"}
sp-std = { version = "3.0.0", default-features = false, path="../../../../substrate/primitives/std"}

[dev-dependencies]
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }

[build-dependencies]
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "sp-std/std",
    "sp-core/std"
]
