[package]
name = "artemis-ethereum"
version = "0.1.0"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[dependencies]
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
hex-literal = { version = "0.3.3", default-features = false }
serde = { version = "1.0.126", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false}
rlp = { version = "0.4", default-features = false }
ethereum-types = { version = "=0.9.2", default-features = false }
libsecp256k1 = { version = "0.3", default-features = false }
ethabi = { package="ethabi-decode", default-features = false, version = "1.2.1", git = "https://github.com/Snowfork/ethabi-decode"}
sp-core = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev"}
sp-io = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev"}
sp-runtime = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev"}
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev"}

[features]
default = ["std"]
std = [
	"ethabi/std",
	"hex/std",
	"serde",
	"ethereum-types/std",
	"codec/std",
	"rlp/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"libsecp256k1/std",
]
